--- a/cadastro.html
+++ b/cadastro.html
@@ -1,285 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Cadastro de Funcionários Ativos</title>
-<style>
-  *{margin:0; padding:0; box-sizing:border-box;}
-  html, body {
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background: #fff0f6;
-    color: #4a2a4a;
-  }
-  body {
-    display: flex; flex-direction: column; min-height: 100vh;
-  }
-  header {
-    background: #fff;
-    box-shadow: 0 2px 6px rgba(214,51,108,0.3);
-    padding: 10px 0;
-  }
-  nav ul {
-    max-width: 700px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    list-style: none;
-    font-weight: 600;
-  }
-  nav a {
-    text-decoration: none;
-    color: #d6336c;
-    font-size: 1.1rem;
-    padding: 8px 15px;
-    border-radius: 8px;
-    transition: background-color 0.3s ease;
-  }
-  nav a:hover, nav a:focus {
-    background-color: #a02947;
-    color: white;
-    outline: none;
-  }
-  main {
-    flex: 1;
-    margin: 20px auto 40px;
-    background: white;
-    padding: 30px 25px;
-    border-radius: 15px;
-    box-shadow: 0 5px 20px rgba(214,51,108,0.25);
-    max-width: 600px;
-    width: 90%;
-  }
-  h1 {
-    color: #d6336c;
-    font-weight: 700;
-    font-size: 2rem;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-  form label {
-    display: block;
-    margin-bottom: 15px;
-    font-weight: 600;
-  }
-  form input[type="text"],
-  form input[type="date"] {
-    width: 100%;
-    padding: 8px 12px;
-    border: 1.8px solid #d6336c;
-    border-radius: 8px;
-    font-size: 1rem;
-    margin-top: 5px;
-  }
-  form button {
-    background: #d6336c;
-    color: white;
-    border: none;
-    padding: 14px 20px;
-    font-size: 1.1rem;
-    font-weight: 700;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 100%;
-    margin-top: 15px;
-    transition: background-color 0.3s ease;
-  }
-  form button:hover,
-  form button:focus {
-    background-color: #a02947;
-    outline: none;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 30px;
-  }
-  th, td {
-    border: 1px solid #d6336c;
-    padding: 10px;
-    text-align: left;
-  }
-  th {
-    background: #f8cbd0;
-  }
-  td.actions {
-    text-align: center;
-  }
-  td.actions button {
-    background: #d6336c;
-    border: none;
-    color: white;
-    padding: 7px 12px;
-    margin-right: 5px;
-    border-radius: 7px;
-    cursor: pointer;
-    font-weight: 700;
-    transition: background-color 0.3s ease;
-  }
-  td.actions button:hover {
-    background: #a02947;
-  }
-  .sort-buttons {
-    margin-bottom: 15px;
-    text-align: right;
-  }
-  .sort-buttons button {
-    background: #d6336c;
-    border: none;
-    color: white;
-    padding: 6px 10px;
-    margin-left: 5px;
-    border-radius: 7px;
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 0.9rem;
-    transition: background-color 0.3s ease;
-  }
-  .sort-buttons button:hover {
-    background: #a02947;
-  }
-</style>
+<title>Cadastrar Funcionário</title>
+<link rel="stylesheet" href="style.css" />
+<script src="menu.js" defer></script>
 </head>
 <body>
-<header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="cadastro.html">Cadastrar Funcionário</a></li>
-      <li><a href="ferias.html">Lançar Férias</a></li>
-      <li><a href="demissao.html">Registrar Demissão</a></li>
-      <li><a href="aviso.html">Aviso Prévio</a></li>
-      <li><a href="ativos.html">Funcionários Ativos</a></li>
-      <li><a href="inativos.html">Funcionários Inativos</a></li>
-      <li><a href="relatorio.html">Gerar Relatório</a></li>
-    </ul>
-  </nav>
-</header>
-<main>
-  <h1>Cadastro de Funcionários Ativos</h1>
-  <form id="formFuncionario">
-    <label>
-      Nome:
+  <div class="container">
+    <h1>Cadastrar Funcionário</h1>
+    <form id="formCadastro">
+      <label for="nome">Nome:</label>
       <input type="text" id="nome" required />
-    </label>
-    <label>
-      CPF:
+      <label for="cpf">CPF:</label>
       <input type="text" id="cpf" required />
-    </label>
-    <label>
-      Data de Cadastro:
-      <input type="date" id="dataCadastro" required />
-    </label>
-    <button type="submit">Adicionar Funcionário</button>
-  </form>
+      <label for="local">Local:</label>
+      <input type="text" id="local" required />
+      <button type="submit">Adicionar Funcionário</button>
+    </form>
 
-  <div class="sort-buttons">
-    <span>Ordenar por:</span>
-    <button onclick="ordenarPorNome()">Nome (A-Z)</button>
-    <button onclick="ordenarPorData()">Data (Mais recente)</button>
+    <table id="tabelaCadastro" style="display:none;">
+      <thead>
+        <tr><th>Nome</th><th>CPF</th><th>Local</th><th>Data Cadastro</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
 
-  <table id="tabelaFuncionarios">
-    <thead>
-      <tr>
-        <th>Nome</th>
-        <th>CPF</th>
-        <th>Data de Cadastro</th>
-        <th>Ações</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</main>
+  <script>
+    function formatDateISOtoBR(isoStr) {
+      const d = new Date(isoStr);
+      return d.toLocaleDateString('pt-BR');
+    }
 
-<script>
-  function getFuncionarios() {
-    return JSON.parse(localStorage.getItem('funcionariosAtivos') || '[]');
-  }
-  function salvarFuncionarios(funcionarios) {
-    localStorage.setItem('funcionariosAtivos', JSON.stringify(funcionarios));
-  }
-  function carregarFuncionarios() {
-    const funcionarios = getFuncionarios();
-    const tbody = document.querySelector('#tabelaFuncionarios tbody');
-    tbody.innerHTML = '';
+    function carregarCadastro() {
+      const lista = JSON.parse(localStorage.getItem('funcionariosAtivos')) || [];
+      const tbody = document.querySelector('#tabelaCadastro tbody');
+      tbody.innerHTML = '';
+      if (lista.length === 0) {
+        document.getElementById('tabelaCadastro').style.display = 'none';
+        return;
+      }
+      document.getElementById('tabelaCadastro').style.display = '';
+      lista.forEach(f => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${f.nome}</td>
+          <td>${f.cpf}</td>
+          <td>${f.local}</td>
+          <td>${formatDateISOtoBR(f.dataCadastro)}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
 
-    funcionarios.forEach((f, i) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td>${f.nome}</td>
-        <td>${f.cpf}</td>
-        <td>${f.dataCadastro}</td>
-        <td class="actions">
-          <button onclick="editarFuncionario(${i})">Editar</button>
-          <button onclick="removerFuncionario(${i})">Excluir</button>
-        </td>
-      `;
-      tbody.appendChild(tr);
+    document.getElementById('formCadastro').addEventListener('submit', e => {
+      e.preventDefault();
+      const nome = document.getElementById('nome').value.trim();
+      const cpf = document.getElementById('cpf').value.trim();
+      const local = document.getElementById('local').value.trim();
+      if (!nome || !cpf || !local) {
+        alert('Preencha todos os campos');
+        return;
+      }
+      const lista = JSON.parse(localStorage.getItem('funcionariosAtivos')) || [];
+      lista.push({
+        nome,
+        cpf,
+        local,
+        dataCadastro: new Date().toISOString()
+      });
+      localStorage.setItem('funcionariosAtivos', JSON.stringify(lista));
+      e.target.reset();
+      carregarCadastro();
+      alert('Funcionário adicionado com sucesso!');
     });
-  }
 
-  document.getElementById('formFuncionario').addEventListener('submit', e => {
-    e.preventDefault();
-    const nome = document.getElementById('nome').value.trim();
-    const cpf = document.getElementById('cpf').value.trim();
-    const dataCadastro = document.getElementById('dataCadastro').value;
-
-    if (!nome || !cpf || !dataCadastro) {
-      alert('Preencha todos os campos!');
-      return;
-    }
-
-    let funcionarios = getFuncionarios();
-    funcionarios.push({ nome, cpf, dataCadastro });
-    salvarFuncionarios(funcionarios);
-
-    e.target.reset();
-    carregarFuncionarios();
-  });
-
-  function editarFuncionario(index) {
-    let funcionarios = getFuncionarios();
-    const f = funcionarios[index];
-    const novoNome = prompt('Editar nome:', f.nome);
-    if (novoNome === null) return;
-    const novoCpf = prompt('Editar CPF:', f.cpf);
-    if (novoCpf === null) return;
-    const novaData = prompt('Editar data (AAAA-MM-DD):', f.dataCadastro);
-    if (novaData === null) return;
-    if (!novoNome.trim() || !novoCpf.trim() || !novaData.trim()) {
-      alert('Campos não podem ficar vazios!');
-      return;
-    }
-    funcionarios[index] = { nome: novoNome.trim(), cpf: novoCpf.trim(), dataCadastro: novaData.trim() };
-    salvarFuncionarios(funcionarios);
-    carregarFuncionarios();
-  }
-
-  function removerFuncionario(index) {
-    if (!confirm('Confirma exclusão do funcionário?')) return;
-    let funcionarios = getFuncionarios();
-    funcionarios.splice(index, 1);
-    salvarFuncionarios(funcionarios);
-    carregarFuncionarios();
-  }
-
-  function ordenarPorNome() {
-    let funcionarios = getFuncionarios();
-    funcionarios.sort((a,b) => a.nome.localeCompare(b.nome));
-    salvarFuncionarios(funcionarios);
-    carregarFuncionarios();
-  }
-  function ordenarPorData() {
-    let funcionarios = getFuncionarios();
-    funcionarios.sort((a,b) => new Date(b.dataCadastro) - new Date(a.dataCadastro));
-    salvarFuncionarios(funcionarios);
-    carregarFuncionarios();
-  }
-
-  carregarFuncionarios();
-</script>
+    window.onload = carregarCadastro;
+  </script>
 </body>
 </html>
