--- a/index.html
+++ b/index.html
@@ -1,66 +1,57 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>RH Evoluído - Home</title>
 <style>
-  /* Reset básico */
-  * {
-    margin: 0; padding: 0; box-sizing: border-box;
-  }
-  html, body {
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background: #fff0f6; /* rosa claro */
-    color: #4a2a4a;
-  }
   body {
+    margin: 0; padding: 0;
+    font-family: Arial, sans-serif;
+    background: #ffe6f0;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
   }
   .container {
-    background: #fff;
+    background: white;
+    border-radius: 8px;
     padding: 40px 50px;
-    border-radius: 15px;
-    box-shadow: 0 5px 15px rgba(214, 51, 108, 0.25);
-    max-width: 400px;
-    width: 90%;
+    box-shadow: 0 4px 15px rgba(214, 51, 108, 0.3);
+    width: 320px;
     text-align: center;
   }
   h1 {
     color: #d6336c;
-    font-weight: bold;
-    font-size: 2.4rem;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+    font-weight: 700;
   }
-  .btn-group {
+  nav {
     display: flex;
-    flex-direction: column; /* vertical */
-    gap: 20px;
+    flex-direction: column;
+    gap: 15px;
   }
-  .btn-group a {
+  nav a {
+    color: #d6336c;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 1.1rem;
+    padding: 10px 0;
+    border: 2px solid #d6336c;
+    border-radius: 6px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  nav a:hover {
     background-color: #d6336c;
     color: white;
-    padding: 15px 30px;
-    border-radius: 10px;
-    font-weight: 600;
-    font-size: 1.2rem;
-    transition: background-color 0.3s ease;
-  }
-  .btn-group a:hover,
-  .btn-group a:focus {
-    background-color: #a02947;
-    outline: none;
   }
 </style>
 </head>
 <body>
   <div class="container">
     <h1>Bem-vindo ao RH Evoluído</h1>
-    <div class="btn-group">
+    <nav>
       <a href="cadastro.html">Cadastrar Funcionário</a>
       <a href="ferias.html">Lançar Férias</a>
       <a href="demissao.html">Registrar Demissão</a>
@@ -68,7 +59,7 @@
       <a href="ativos.html">Funcionários Ativos</a>
       <a href="inativos.html">Funcionários Inativos</a>
       <a href="relatorio.html">Gerar Relatório</a>
-    </div>
+    </nav>
   </div>
 </body>
 </html>
